--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" defer></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <!-- Le type="text/babel" -> permet de ddire que ce script va être utilisé (converti) avec babel -->
-    <script src="syntaxe-JSX/app.js" defer type="text/babel"></script>
+    <script src="4-premier-composant/app.js" defer type="text/babel"></script>
 </head>
 <body>
     <div id="app"></div>
