--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js" defer></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" defer></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <!-- Le type="text/babel" -> permet de ddire que ce script va être utilisé (converti) avec babel -->
-    <script src="4-premier-composant/app.js" defer type="text/babel"></script>
+    <script src="6-formulaires/app.js" defer type="text/babel"></script>
 </head>
 <body>
     <div id="app"></div>
