9-TP-liste-produit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" defer></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <!-- Le type="text/babel" -> permet de ddire que ce script va être utilisé (converti) avec babel -->
-    <script src="7-convertisseur-celcius-fahrenheit/app.js" defer type="text/babel"></script>
+    <script src="9-TP-liste-produit/app.js" defer type="text/babel"></script>
 </head>
 <body>
     <div class="container mt-4">
